hero section completed

--- a/index.html
+++ b/index.html
@@ -38,5 +38,31 @@
         </div>
     </header>
     <!-- header section end -->
+
+
+    <!-- hero section start -->
+    <section id="hero">
+        <div class="container">
+            <div class="hero-wrapper">
+                <!-- hero textbox start -->
+                <div class="hero-text">
+                    <h1>Brand New Group of Architects</h1>
+                    
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <a href="#" class="btn">Explore More</a>
+                </div>
+                <!-- hero textbox end -->
+
+
+                <!-- hero-banner start -->
+                <div class="hero-banner">
+                    <img src="./images/banner.png" alt="">
+                </div>
+                <!-- hero-banner end -->
+            </div>
+        </div>
+    </section>
+    <!-- hero section end -->
 </body>
 </html>
