--- a/index.html
+++ b/index.html
@@ -64,5 +64,46 @@
         </div>
     </section>
     <!-- hero section end -->
+    
+    
+
+    <!-- team section start -->
+    <section id="team">
+        <div class="container">
+            <div class="team-wrapper">
+
+                <!-- team left side start -->
+                <div class="team-img">
+                    <div class="team-img-box">
+                        <img src="./images/team1.png" alt="team-person-image">
+                    </div>
+                    <div class="team-img-box">
+                        <img src="./images/team2.png" alt="team-person-image">
+                    </div>
+                    <div class="team-img-box">
+                        <img src="./images/team3.png" alt="team-person-image">
+                    </div>
+                    <div class="team-img-box">
+                        <img src="./images/team4.png" alt="team-person-image">
+                    </div>
+                </div>
+                <!-- team left side end -->
+
+
+                <!-- team right side start -->
+                <div class="team-text">
+                    <h2><span>Quick list</span> <span>of Our</span> <span>Features</span></h2>
+
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    </p>
+
+                    <a href="#" class="btn">Explore More</a>
+                </div>
+                <!-- team right side end -->
+            </div>
+        </div>
+    </section>
+    <!-- team section end -->
 </body>
 </html>
