features section completed

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <label for="navBtn"><i class="fas fa-bars"></i></label>
 
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Login</a></li>
+                        <li><a href="#hero">Home</a></li>
+                        <li><a href="#team">About</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
                     </ul>
                 </nav>
                 <!-- nav-bar end -->
@@ -105,5 +105,59 @@
         </div>
     </section>
     <!-- team section end -->
+
+
+
+    <!-- features section start -->
+    <section id="features">
+        <div class="container">
+            <div class="features-wrapper">
+                <!-- features left side start -->
+                <div class="features-text">
+                    <div class="f-t-top">
+                        <h3>Features you will love & enjoy</h3>
+
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    </div>
+
+                    <div class="f-t-bttm">
+                        <div class="f-t-bttm-field">
+                            <h3>Dexktop & Mobile Version</h3>
+
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="f-t-bttm-field">
+                            <h3>Drag & Drop Builder</h3>
+
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="f-t-bttm-field">
+                            <h3>Awesome Modern Design</h3>
+
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="f-t-bttm-field">
+                            <h3>Super Easy to Edit</h3>
+
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- features left side end -->
+
+                <!-- features right side start -->
+                <div class="features-img">
+                    <img src="./images/architect.png" alt="architect">
+                    <div class="features-tag">
+                        <h3>10+Years</h3>
+                        <p>Experience</p>
+                    </div>
+                </div>
+                <!-- features end side start -->
+            </div>
+        </div>
+    </section>
+    <!-- features section end -->
 </body>
 </html>
