contact section completed

--- a/index.html
+++ b/index.html
@@ -159,5 +159,84 @@
         </div>
     </section>
     <!-- features section end -->
+
+
+
+
+    <!-- countdown section start -->
+    <section id="coutdown">
+        <div class="container">
+            <div class="countdown-wrapper">
+                <!-- count-header start -->
+                <div class="count-header">
+                    <h4>Some Facts</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+                <!-- count-header end -->
+
+
+
+                <!-- count-box start -->
+                <div class="count-boxes">
+                    <div class="count-box">
+                        <img src="./images/icons/ribon.png" alt="Award">
+                        <span>54</span>
+                        <p>Award Winnings</p>
+                    </div>
+                    <div class="count-box">
+                        <img src="./images/icons/projects.png" alt="Projects">
+                        <span>1458</span>
+                        <p>Project Finished</p>
+                    </div>
+                    <div class="count-box">
+                        <img src="./images/icons/customers.png" alt="Customers">
+                        <span>590</span>
+                        <p>Clients Worked</p>
+                    </div>
+                    <div class="count-box">
+                        <img src="./images/icons/email.png" alt="Email">
+                        <span>22578</span>
+                        <p>Email Send</p>
+                    </div>
+                </div>
+                <!-- count-box end -->
+            </div>
+        </div>
+    </section>
+    <!-- countdown section end -->
+
+
+
+
+
+
+    <!-- contact section start -->
+    <section id="contact">
+        <div class="container">
+            <form action="./" class="contact-form">
+                <h5>Contact Us</h5>
+                <div class="contact-field">
+                    <input type="text" required>
+                    <label>Name</label>
+                </div>
+                <div class="contact-field">
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="contact-field">
+                    <input type="text" required>
+                    <label>Subject</label>
+                </div>
+                <div class="contact-field">
+                    <textarea required></textarea>
+                    <label>Message</label>
+                </div>
+                <div class="contact-field">
+                    <button class="btn" type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+    </section>
+    <!-- contact section end -->
 </body>
 </html>
