--- a/index.html
+++ b/index.html
@@ -238,5 +238,51 @@
         </div>
     </section>
     <!-- contact section end -->
+
+
+
+    <!-- sponsor section start -->
+    <section id="sponsors">
+        <div class="container">
+            <div class="sponsor-wrapper">
+                <div class="sponsor-top">
+                    <h4>Our Sponsors</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+
+                <div class="sponsors-logo">
+                    <div class="sp-logo">
+                        <img src="./images/sponsors/spotify.png" alt="spotify">
+                    </div>
+                    <div class="sp-logo">
+                        <img src="./images/sponsors/amazon.png" alt="amazon">
+                    </div>
+                    <div class="sp-logo">
+                        <img src="./images/sponsors/google.png" alt="google">
+                    </div>
+                    <div class="sp-logo">
+                        <img src="./images/sponsors/telerama.png" alt="telerama">
+                    </div>
+                    <div class="sp-logo">
+                        <img src="./images/sponsors/figma.png" alt="figma">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- sponsor section end -->
+
+
+
+    <!-- footer section start -->
+    <footer>
+        <div class="container">
+            <div class="footer-wrapper">
+                <p>All rights reserved copyright@2023 startup landing page design</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- footer section end -->
 </body>
 </html>
